clean up themecontroller, view, command & readmodel
removed 'socialrally' text
fixed ForumDetail view

--- a/apps/AdminComposite/Views/Forum/Create.cshtml
+++ b/apps/AdminComposite/Views/Forum/Create.cshtml
@@ -57,7 +57,7 @@
 				<dt><label for="forum-host">Host</label></dt>
 				<dd>
 					@Html.TextBoxFor(m => m.UrlHostName, new { id = "forum-host", @readonly = "readonly" })
-					<p>Forum url: <b><span id="forum-url">http//socialrally.com/{organization-name}/forums/{forum-name}</span></b></p>
+					<p>Forum url: <b><span id="forum-url">http//newco-forums.com/{organization-name}/forums/{forum-name}</span></b></p>
 				</dd>
 
 				<dt><label for="forum-description">Description</label></dt>
