minor improvements to forum home page

--- a/assets/templates/Forum Skeleton/Home.cshtml
+++ b/assets/templates/Forum Skeleton/Home.cshtml
@@ -54,7 +54,7 @@
           <ul class="nav">
             <li class="active"><a href="/">Home</a></li>
             <li><a href="#about">Categories</a></li>
-            <li><a href="#about">Search</a></li>
+            <li><a href="#about">Tags</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -83,12 +83,13 @@
         <div class="well">
           <h2>Categories</h2>
           <ul>
-            <li><a href="#">Category</a></li>
-            <li><a href="#">Another Category</a></li>
-            <li><a href="#">Creative Category</a></li>
-            <li><a href="#">Unmoderated Forum</a></li>
-            <li><a href="#">Placeholder Category</a></li>
-            <li><a href="#">Example Category</a></li>
+            <li><a href="#"><strong>All Categories</strong></a> (70)</li>
+            <li><a href="#">Category</a> (10)</li>
+            <li><a href="#">Another Category</a> (10)</li>
+            <li><a href="#">Creative Category</a> (10)</li>
+            <li><a href="#">Unmoderated Forum</a> (10)</li>
+            <li><a href="#">Placeholder Category</a> (10)</li>
+            <li><a href="#">Example Category</a> (10)</li>
           </ul>
           <h2>Tags</h2>
           <p><small>(Tag cloud here.)</small></p>
@@ -121,6 +122,7 @@
             <div class="span6">
                 <h2>{Post Title}</h2>           
                 <p>This is a listing of the top 6 posts across all forums. This post is the top overall, and they decrease left to right. Lower ranked posts display shorter text excerpts. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+                <p><small>(Need better post/view comment controls that include a comment count as well as a voting mechanism.)</small></p>
                 <div class="row">
                     <div class="span3"><a class="btn primary" href="#">Post Comment &raquo;</a></div>
                     <div class="span3" style="padding-top: 7px; text-align: right;"><a href="#">View Comments</a></div>
