--- a/assets/templates/Forum Skeleton/Home.cshtml
+++ b/assets/templates/Forum Skeleton/Home.cshtml
@@ -42,7 +42,7 @@
           <form action="" class="pull-right">
             <input class="input-small" type="text" placeholder="Username">
             <input class="input-small" type="password" placeholder="Password">
-            <button class="btn" type="submit">Sign in</button>
+            <button class="btn primary" type="submit">Sign in</button> <button href="#" class="btn small">Register account</button>
           </form>
         </div>
       </div>
@@ -62,7 +62,7 @@
             </div>                      
         </div>
         <div class="well">
-          <h2>Categories</h2>
+          <h3>Categories</h3>
           <ul>
             <li><a href="#"><strong>All Categories</strong></a> (70)</li>
             <li><a href="#">Category</a> (10)</li>
@@ -72,7 +72,7 @@
             <li><a href="#">Placeholder Category</a> (10)</li>
             <li><a href="#">Example Category</a> (10)</li>
           </ul>
-          <h2>Tags</h2>
+          <h3>Tags</h3>
           <p><small>(Tag cloud here.)</small></p>
           <ul>
             <li><a href="#">Link</a></li>
@@ -90,72 +90,115 @@
           <a class="close" href="#">×</a>
           <p class="alert-message-text"><h2>Hello, world!</h2> This is something a user only needs to see occasionally and can be closed. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
           <div class="alert-actions">
-            <a class="btn medium primary" href="#">Go register!</a>
+            <a class="btn large info" href="#">Go register!</a>
           </div>
         </div>
         
         <ul class="tabs">
-            <li class="active"><a href="#">Top Posts</a></li>
-            <li><a href="#">Recent Posts</a></li>
+            <li class="active"><a href="#">Popular Posts</a></li>
+            <li><a href="#">Controversial Posts</a></li>
             <li><a href="#">All Posts</a></li>
         </ul>
 
         <!-- top posts -->
         <div class="row">
-            <div class="span6">
-                <h2>{Post Title}</h2>           
-                <p>This is a listing of the top 6 posts across all forums. This post is the top overall, and they decrease left to right. Lower ranked posts display shorter text excerpts. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-                <p><small>(Need better post/view comment controls that include a comment count as well as a voting mechanism.)</small></p>
+            <div class="span8">
+                <div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px; float: right; clear: left;">
+                    <img src="images/thumb-up.png"/><br/>
+                    <img src="images/thumb-down.png"/><br/>
+                    <img src="images/icon_notification_attention.png"/><br/>
+                </div>    
+                <h2>{Most Popular Post Title}</h2>           
+                <p>This is a listing of the top posts across all forums. This post is the top overall, and they decrease left to right. Lower ranked posts display shorter text excerpts. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. </p>
                 <div class="row">
-                    <div class="span3"><a class="btn primary" href="#">Post Comment &raquo;</a></div>
-                    <div class="span3" style="padding-top: 7px; text-align: right;"><a href="#">View Comments</a></div>
+                    <div class="span4"><a class="btn" href="#">Add comment &raquo;</a></div>
+                    <div class="span4" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a> | <span class="label">Another Category</span></div>
                 </div>                
             </div>
-            <div class="span5">
+            <div class="span4">
+                <div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px; float: right; clear: left;">
+                    <img src="images/thumb-up.png"/><br/>
+                    <img src="images/thumb-down.png"/><br/>
+                    <img src="images/icon_notification_attention.png"/><br/>
+                </div>    
                 <h2>{Post Title}</h2>           
-                <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
+                <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. <span class="label">Category</span></p>
                 <div class="row">
-                    <div class="span3"><a class="btn primary" href="#">Post Comment &raquo;</a></div>
-                    <div class="span2" style="padding-top: 7px; text-align: right;"><a href="#">View Comments</a></div>
-                </div>  
+                    <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
+                    <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
+                </div>                
             </div>
-            <div class="span5">
+            <div class="span4">
+                <div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px; float: right; clear: left;">
+                    <img src="images/thumb-up.png"/><br/>
+                    <img src="images/thumb-down.png"/><br/>
+                    <img src="images/icon_notification_attention.png"/><br/>
+                </div>    
                 <h2>{Post Title}</h2>           
-                <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
+                <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. <span class="label">Category</span></p>
                 <div class="row">
-                    <div class="span3"><a class="btn primary" href="#">Post Comment &raquo;</a></div>
-                    <div class="span2" style="padding-top: 7px; text-align: right;"><a href="#">View Comments</a></div>
-                </div>  
-            </div>
+                    <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
+                    <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
+                </div>                
+            </div>            
         </div>
 
         <hr>
 
         <div class="row">
-            <div class="span6">
-                <h3>{Post Title}</h3>           
-                <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
+            <div class="span4">
+                <div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px; float: right; clear: left;">
+                    <img src="images/thumb-up.png"/><br/>
+                    <img src="images/thumb-down.png"/><br/>
+                    <img src="images/icon_notification_attention.png"/><br/>
+                </div>    
+                <h2>{Post Title}</h2>           
+                <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. <span class="label">Category</span></p>
                 <div class="row">
-                    <div class="span3"><a class="btn small primary" href="#">Post Comment &raquo;</a></div>
-                    <div class="span3" style="padding-top: 7px; text-align: right;"><a href="#">View Comments</a></div>
+                    <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
+                    <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
                 </div>                
             </div>
-            <div class="span5">
-                <h3>{Post Title}</h3>           
-                <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</p>
+            <div class="span4">
+                <div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px; float: right; clear: left;">
+                    <img src="images/thumb-up.png"/><br/>
+                    <img src="images/thumb-down.png"/><br/>
+                    <img src="images/icon_notification_attention.png"/><br/>
+                </div>    
+                <h2>{Post Title}</h2>           
+                <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. <span class="label">Category</span></p>
                 <div class="row">
-                    <div class="span3"><a class="btn small primary" href="#">Post Comment &raquo;</a></div>
-                    <div class="span2" style="padding-top: 7px; text-align: right;"><a href="#">View Comments</a></div>
-                </div>  
+                    <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
+                    <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
+                </div>                
             </div>
-            <div class="span5">
-                <h3>{Post Title}</h3>           
-                <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</p>
+            <div class="span4">
+                <div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px; float: right; clear: left;">
+                    <img src="images/thumb-up.png"/><br/>
+                    <img src="images/thumb-down.png"/><br/>
+                    <img src="images/icon_notification_attention.png"/><br/>
+                </div>    
+                <h2>{Post Title}</h2>           
+                <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. <span class="label">Category</span></p>
                 <div class="row">
-                    <div class="span3"><a class="btn small primary" href="#">Post Comment &raquo;</a></div>
-                    <div class="span2" style="padding-top: 7px; text-align: right;"><a href="#">View Comments</a></div>
-                </div>  
+                    <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
+                    <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
+                </div>                
             </div>
+            <div class="span4">
+                <div style="padding-top: 25px; padding-left: 5px; padding-right: 5px; padding-bottom: 5px; float: right; clear: left;">
+                    <img src="images/thumb-up.png"/><br/>
+                    <img src="images/thumb-down.png"/><br/>
+                    <img src="images/icon_notification_attention.png"/><br/>
+                </div>    
+                <h2>{Post Title}</h2>           
+                <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. <span class="label">Category</span></p>
+                <div class="row">
+                    <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
+                    <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
+                </div>                
+            </div>          
+            
         </div>
             
         <hr>
