--- a/assets/templates/Forum Skeleton/Home.cshtml
+++ b/assets/templates/Forum Skeleton/Home.cshtml
@@ -109,7 +109,8 @@
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
                 <h2>{Most Popular Post Title}</h2>           
-                <p>This is a listing of the top posts across all forums. This post is the top overall, and they decrease left to right. Lower ranked posts display shorter text excerpts. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. <span class="label">Another Category</span></p>
+                <p>This is a listing of the top posts across all forums. This post is the top overall, and they decrease left to right. Lower ranked posts display shorter text excerpts. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
+                &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Another Category</span></span></p>
                 <div class="row">
                     <div class="span5"><a class="btn" href="#">Add comment &raquo;</a></div>
                     <div class="span5" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
@@ -122,7 +123,8 @@
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
                 <h2>{Post Title}</h2>           
-                <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. <span class="label">Category</span></p>
+                <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. 
+                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Category</span></span></p>
                 <div class="row">
                     <div class="span3"><a class="btn small" href="#">Add comment &raquo;</a></div>
                     <div class="span3" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
@@ -139,8 +141,9 @@
                     <img src="images/thumb-down.png"/><br/>
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
-                <h2>{Most Popular Post Title}</h2>           
-                <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. Etiam porta sem malesuada magna mollis euismod. <span class="label">Placeholder Category</span></p>
+                <h2>{Post Title}</h2>           
+                <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. Etiam porta sem malesuada magna mollis euismod. 
+                &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Placeholder Category</span></span></p>
                 <div class="row">
                     <div class="span4"><a class="btn" href="#">Add comment &raquo;</a></div>
                     <div class="span4" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
@@ -153,7 +156,8 @@
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
                 <h2>{Post Title}</h2>           
-                <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. Etiam porta sem malesuada magna mollis euismod. <span class="label">Another Category</span></p>
+                <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. Etiam porta sem malesuada magna mollis euismod. 
+                &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Another Category</span></p>
                 <div class="row">
                     <div class="span4"><a class="btn small" href="#">Add comment &raquo;</a></div>
                     <div class="span4" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
@@ -171,7 +175,8 @@
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
                 <h2>{Post Title}</h2>           
-                <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. <span class="label">Example Category</span></p>
+                <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. 
+                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Example Category</span></p>
                 <div class="row">
                     <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
                     <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
@@ -184,7 +189,8 @@
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
                 <h2>{Post Title}</h2>           
-                <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. <span class="label">Creative Category</span></p>
+                <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. 
+                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Creative Category</span></p>
                 <div class="row">
                     <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
                     <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
@@ -197,7 +203,8 @@
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
                 <h2>{Post Title}</h2>           
-                <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. <span class="label">Unmoderated Forum</span></p>
+                <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. 
+                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Unmoderated Forum</span></p>
                 <div class="row">
                     <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
                     <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
@@ -210,7 +217,8 @@
                     <img src="images/icon_notification_attention.png"/><br/>
                 </div>    
                 <h2>{Post Title}</h2>           
-                <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. <span class="label">Category</span></p>
+                <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere. 
+                    &mdash; <span style="text-align: right; font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <span class="label">Category</span></p>
                 <div class="row">
                     <div class="span2"><a class="btn small" href="#">Add comment &raquo;</a></div>
                     <div class="span2" style="padding-top: 7px; text-align: right; font-size: smaller;"><a href="#">999 comments</a></div>
